k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: default
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: fastapi-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
